--- a/D3D11Starter.vcxproj.filters
+++ b/D3D11Starter.vcxproj.filters
@@ -175,6 +175,9 @@
     <FxCompile Include="PixelShaderSky.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="ShadowMapVertexShader.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
